--- a/Project_2.ipynb
+++ b/Project_2.ipynb
@@ -165,7 +165,7 @@
     "\n",
     "F_M = making_mass_hess(F,geom2)\n",
     "\n",
-    "\n",
+    "## print test comment\n",
     "print(\"\\n For the H\\u2082O test case, the 9\\u00d79 mass-weighted Hessian is \\n\")\n",
     "for row in F_M:\n",
     "  print(' '.join(map(lambda x: \"{:11.7f}\".format(x), row)))\n",
