--- a/Project_1-Molecular_Geometry_Analysis.ipynb
+++ b/Project_1-Molecular_Geometry_Analysis.ipynb
@@ -689,12 +689,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "52d47462dcd2040b95b95cd05145b2336d7096fb6b0e82a970983a1e7ce299cb"
+    "hash": "7f429011515af75a049460d41c23c57bf908d3632e1a03a39bee6d0c61870635"
    }
   }
  },
