--- a/Project_2-Harmonic_Vibrational_Analysis.ipynb
+++ b/Project_2-Harmonic_Vibrational_Analysis.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import sys"
    ]
   },
   {
@@ -48,13 +49,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {
     "id": "VKvy7svtSj5j"
    },
    "outputs": [],
    "source": [
-    "geom2=np.genfromtxt(\"h2o_geom.txt\", skip_header=1)"
+    "geom2=np.genfromtxt(\"input/h2o_geom.txt\", skip_header=1)"
    ]
   },
   {
@@ -81,13 +82,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {
     "id": "liLbAH8wfVpj"
    },
    "outputs": [],
    "source": [
-    "hess2=np.genfromtxt(\"h2o_hessian.txt\", skip_header=1)\n",
+    "hess2=np.genfromtxt(\"input/h2o_hessian.txt\", skip_header=1)\n",
     "\n",
     "def making_square_hess(hess,geom):\n",
     "  H = np.zeros([3*len(geom),3*len(geom)])\n",
@@ -120,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -269,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -334,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
