--- a/Project_2-Harmonic_Vibrational_Analysis.ipynb
+++ b/Project_2-Harmonic_Vibrational_Analysis.ipynb
@@ -317,6 +317,15 @@
    "source": [
     "Note that there are only three zero frequencies in this case when there should be six. This is because the structure used in the computation is not a stationary point on the potential energy surface, and thus the three “rotational frequencies” are non-zero."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Reference:\n",
+    "*https://github.com/CrawfordGroup/ProgrammingProjects/tree/master/Project%2302*"
+   ]
   }
  ],
  "metadata": {
