--- a/Project_1-Molecular_Geometry_Analysis.ipynb
+++ b/Project_1-Molecular_Geometry_Analysis.ipynb
@@ -671,6 +671,15 @@
     "const=h/(8*math.pi*math.pi*c*1.6605402E-27*(5.29177249e-11**2))\n",
     "print(\"\\n Rotational constants (cm\\u207b\\u00b9) \\n    A = {:6.4f}   B = {:6.4f}   C = {:6.4f} \\n\".format(const/Ia, const/Ib, const/Ic) )"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Reference:\n",
+    "*https://github.com/CrawfordGroup/ProgrammingProjects/tree/master/Project%2301*"
+   ]
   }
  ],
  "metadata": {
