--- a/Project_3-Hartree-Fock_SCF_&_4-MP2 energy.ipynb
+++ b/Project_3-Hartree-Fock_SCF_&_4-MP2 energy.ipynb
@@ -1070,6 +1070,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Reference:\n",
+    "*https://github.com/CrawfordGroup/ProgrammingProjects/tree/master/Project%2303*"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "vWI1fWMcGMFd"
@@ -1232,6 +1241,15 @@
     "print(\" Emp2 =  {:18.12f}\".format(Emp2))\n",
     "print(\"\\u23af\"*30)\n",
     "print(\" Etot =  {:18.12f} \\n\".format(Etot))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Reference:\n",
+    "*https://github.com/CrawfordGroup/ProgrammingProjects/tree/master/Project%2304*"
    ]
   }
  ],
